metadata/force-app/main/default/objects/CustomName_zpRRO__c/CustomName_zpRRO__c.object-meta.xml
<CustomObject>
    <description>Description_TpVKy</description>
    <label>CustomLabel_KobLn</label>
    <nameField>
        <label>CustomLabel_KobLn</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_KobLns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>