metadata/force-app/main/default/objects/CustomName_zpRRO__c/fields/CustomField_aSOPu__c.field-meta.xml
<CustomField>
    <fullName>CustomField_aSOPu__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldFUOwH</label>
    <length>255</length>
    <type>Text</type>
</CustomField>